breaking: initial release
Signed-off-by: secondman <secondman@jetstreamlabs.com>

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -165,7 +165,11 @@
   }
 
   body {
-    @apply bg-background text-foreground bg-repeat;
+    @apply bg-background text-foreground;
+  }
+
+  .welcome-page {
+    @apply bg-repeat;
     background-image: url('/storage/img/bgtile.png');
   }
 }
